A3-completed